P1/3-geracao/sintatico.output
Terminals unused in grammar

    T_e


State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 9 shift/reduce
State 68 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 lista_variaveis: T_IDENTIF lista_variaveis
   12                | T_IDENTIF

   13 lista_comandos: ε
   14               | comando lista_comandos

   15 comando: entrada_saida
   16        | atribuicao
   17        | selecao
   18        | repeticao

   19 entrada_saida: entrada
   20              | saida

   21 entrada: T_LEIA T_IDENTIF

   22 saida: T_ESCREVA expressao

   23 atribuicao: T_IDENTIF T_ATRIB expressao

   24 $@3: ε

   25 $@4: ε

   26 selecao: T_SE expressao T_ENTAO $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE

   27 $@5: ε

   28 $@6: ε

   29 repeticao: T_ENQTO $@5 expressao T_FACA $@6 lista_comandos T_FIMENQTO

   30 expressao: expressao T_VEZES expressao
   31          | expressao T_DIV expressao
   32          | expressao T_MAIS expressao
   33          | expressao T_MENOS expressao
   34          | expressao T_MAIOR expressao
   35          | expressao T_MENOR expressao
   36          | expressao T_IGUAL expressao
   37          | expressao T_E expressao
   38          | expressao T_OU expressao
   39          | termo

   40 termo: T_IDENTIF
   41      | T_NUMERO
   42      | T_V
   43      | T_F
   44      | T_NAO termo
   45      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 11 12 21 23 40
    T_LEIA (262) 21
    T_ESCREVA (263) 22
    T_ENQTO (264) 29
    T_FACA (265) 29
    T_FIMENQTO (266) 29
    T_SE (267) 26
    T_ENTAO (268) 26
    T_SENAO (269) 26
    T_FIMSE (270) 26
    T_ATRIB (271) 23
    T_VEZES (272) 30
    T_DIV (273) 31
    T_MAIS (274) 32
    T_MENOS (275) 33
    T_MAIOR (276) 34
    T_MENOR (277) 35
    T_IGUAL (278) 36
    T_E (279) 37
    T_OU (280) 38
    T_V (281) 42
    T_F (282) 43
    T_NUMERO (283) 41
    T_NAO (284) 44
    T_ABRE (285) 45
    T_FECHA (286) 45
    T_LOGICO (287) 9
    T_INTEIRO (288) 10
    T_e (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    programa (36)
        on left: 3
        on right: 0
    $@1 (37)
        on left: 1
        on right: 3
    $@2 (38)
        on left: 2
        on right: 3
    cabecalho (39)
        on left: 4
        on right: 3
    variaveis (40)
        on left: 5 6
        on right: 3
    declaracao_variaveis (41)
        on left: 7 8
        on right: 6 7
    tipo (42)
        on left: 9 10
        on right: 7 8
    lista_variaveis (43)
        on left: 11 12
        on right: 7 8 11
    lista_comandos (44)
        on left: 13 14
        on right: 3 14 26 29
    comando (45)
        on left: 15 16 17 18
        on right: 14
    entrada_saida (46)
        on left: 19 20
        on right: 15
    entrada (47)
        on left: 21
        on right: 19
    saida (48)
        on left: 22
        on right: 20
    atribuicao (49)
        on left: 23
        on right: 16
    selecao (50)
        on left: 26
        on right: 17
    $@3 (51)
        on left: 24
        on right: 26
    $@4 (52)
        on left: 25
        on right: 26
    repeticao (53)
        on left: 29
        on right: 18
    $@5 (54)
        on left: 27
        on right: 29
    $@6 (55)
        on left: 28
        on right: 29
    expressao (56)
        on left: 30 31 32 33 34 35 36 37 38 39
        on right: 22 23 26 29 30 31 32 33 34 35 36 37 38 45
    termo (57)
        on left: 40 41 42 43 44 45
        on right: 39 44


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    9 tipo: T_LOGICO •

    $default  reduce using rule 9 (tipo)


State 7

   10 tipo: T_INTEIRO •

    $default  reduce using rule 10 (tipo)


State 8

    3 programa: cabecalho variaveis • $@1 T_INICIO lista_comandos T_FIM $@2

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 10

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    3 programa: cabecalho variaveis $@1 • T_INICIO lista_comandos T_FIM $@2

    T_INICIO  shift, and go to state 14


State 12

   11 lista_variaveis: T_IDENTIF • lista_variaveis
   12                | T_IDENTIF •

    T_IDENTIF  shift, and go to state 12

    $default  reduce using rule 12 (lista_variaveis)

    lista_variaveis  go to state 15


State 13

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •

    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 16
    tipo                  go to state 10


State 14

    3 programa: cabecalho variaveis $@1 T_INICIO • lista_comandos T_FIM $@2

    T_IDENTIF  shift, and go to state 17
    T_LEIA     shift, and go to state 18
    T_ESCREVA  shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_SE       shift, and go to state 21

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 22
    comando         go to state 23
    entrada_saida   go to state 24
    entrada         go to state 25
    saida           go to state 26
    atribuicao      go to state 27
    selecao         go to state 28
    repeticao       go to state 29


State 15

   11 lista_variaveis: T_IDENTIF lista_variaveis •

    $default  reduce using rule 11 (lista_variaveis)


State 16

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 17

   23 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  shift, and go to state 30


State 18

   21 entrada: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 31


State 19

   22 saida: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 38
    termo      go to state 39


State 20

   29 repeticao: T_ENQTO • $@5 expressao T_FACA $@6 lista_comandos T_FIMENQTO

    $default  reduce using rule 27 ($@5)

    $@5  go to state 40


State 21

   26 selecao: T_SE • expressao T_ENTAO $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 41
    termo      go to state 39


State 22

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos • T_FIM $@2

    T_FIM  shift, and go to state 42


State 23

   14 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 17
    T_LEIA     shift, and go to state 18
    T_ESCREVA  shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_SE       shift, and go to state 21

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 43
    comando         go to state 23
    entrada_saida   go to state 24
    entrada         go to state 25
    saida           go to state 26
    atribuicao      go to state 27
    selecao         go to state 28
    repeticao       go to state 29


State 24

   15 comando: entrada_saida •

    $default  reduce using rule 15 (comando)


State 25

   19 entrada_saida: entrada •

    $default  reduce using rule 19 (entrada_saida)


State 26

   20 entrada_saida: saida •

    $default  reduce using rule 20 (entrada_saida)


State 27

   16 comando: atribuicao •

    $default  reduce using rule 16 (comando)


State 28

   17 comando: selecao •

    $default  reduce using rule 17 (comando)


State 29

   18 comando: repeticao •

    $default  reduce using rule 18 (comando)


State 30

   23 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 44
    termo      go to state 39


State 31

   21 entrada: T_LEIA T_IDENTIF •

    $default  reduce using rule 21 (entrada)


State 32

   40 termo: T_IDENTIF •

    $default  reduce using rule 40 (termo)


State 33

   42 termo: T_V •

    $default  reduce using rule 42 (termo)


State 34

   43 termo: T_F •

    $default  reduce using rule 43 (termo)


State 35

   41 termo: T_NUMERO •

    $default  reduce using rule 41 (termo)


State 36

   44 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    termo  go to state 45


State 37

   45 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 46
    termo      go to state 39


State 38

   22 saida: T_ESCREVA expressao •
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_E      shift, and go to state 54
    T_OU     shift, and go to state 55

    $default  reduce using rule 22 (saida)


State 39

   39 expressao: termo •

    $default  reduce using rule 39 (expressao)


State 40

   29 repeticao: T_ENQTO $@5 • expressao T_FACA $@6 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 56
    termo      go to state 39


State 41

   26 selecao: T_SE expressao • T_ENTAO $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 57
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_E      shift, and go to state 54
    T_OU     shift, and go to state 55


State 42

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM • $@2

    $default  reduce using rule 2 ($@2)

    $@2  go to state 58


State 43

   14 lista_comandos: comando lista_comandos •

    $default  reduce using rule 14 (lista_comandos)


State 44

   23 atribuicao: T_IDENTIF T_ATRIB expressao •
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_E      shift, and go to state 54
    T_OU     shift, and go to state 55

    $default  reduce using rule 23 (atribuicao)


State 45

   44 termo: T_NAO termo •

    $default  reduce using rule 44 (termo)


State 46

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao
   45 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_E      shift, and go to state 54
    T_OU     shift, and go to state 55
    T_FECHA  shift, and go to state 59


State 47

   30 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 60
    termo      go to state 39


State 48

   31 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 61
    termo      go to state 39


State 49

   32 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 62
    termo      go to state 39


State 50

   33 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 63
    termo      go to state 39


State 51

   34 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 64
    termo      go to state 39


State 52

   35 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 65
    termo      go to state 39


State 53

   36 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 66
    termo      go to state 39


State 54

   37 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 67
    termo      go to state 39


State 55

   38 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_NUMERO   shift, and go to state 35
    T_NAO      shift, and go to state 36
    T_ABRE     shift, and go to state 37

    expressao  go to state 68
    termo      go to state 39


State 56

   29 repeticao: T_ENQTO $@5 expressao • T_FACA $@6 lista_comandos T_FIMENQTO
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_FACA   shift, and go to state 69
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_E      shift, and go to state 54
    T_OU     shift, and go to state 55


State 57

   26 selecao: T_SE expressao T_ENTAO • $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE

    $default  reduce using rule 24 ($@3)

    $@3  go to state 70


State 58

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2 •

    $default  reduce using rule 3 (programa)


State 59

   45 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 45 (termo)


State 60

   30 expressao: expressao • T_VEZES expressao
   30          | expressao T_VEZES expressao •
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_E  shift, and go to state 54

    T_E       [reduce using rule 30 (expressao)]
    $default  reduce using rule 30 (expressao)


State 61

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   31          | expressao T_DIV expressao •
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_E  shift, and go to state 54

    T_E       [reduce using rule 31 (expressao)]
    $default  reduce using rule 31 (expressao)


State 62

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   32          | expressao T_MAIS expressao •
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_E      shift, and go to state 54

    T_E       [reduce using rule 32 (expressao)]
    $default  reduce using rule 32 (expressao)


State 63

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   33          | expressao T_MENOS expressao •
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_E      shift, and go to state 54

    T_E       [reduce using rule 33 (expressao)]
    $default  reduce using rule 33 (expressao)


State 64

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   34          | expressao T_MAIOR expressao •
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_E      shift, and go to state 54

    T_E       [reduce using rule 34 (expressao)]
    $default  reduce using rule 34 (expressao)


State 65

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   35          | expressao T_MENOR expressao •
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_E      shift, and go to state 54

    T_E       [reduce using rule 35 (expressao)]
    $default  reduce using rule 35 (expressao)


State 66

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   36          | expressao T_IGUAL expressao •
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_E      shift, and go to state 54

    T_E       [reduce using rule 36 (expressao)]
    $default  reduce using rule 36 (expressao)


State 67

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   37          | expressao T_E expressao •
   38          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_E      shift, and go to state 54
    T_OU     shift, and go to state 55

    T_VEZES   [reduce using rule 37 (expressao)]
    T_DIV     [reduce using rule 37 (expressao)]
    T_MAIS    [reduce using rule 37 (expressao)]
    T_MENOS   [reduce using rule 37 (expressao)]
    T_MAIOR   [reduce using rule 37 (expressao)]
    T_MENOR   [reduce using rule 37 (expressao)]
    T_IGUAL   [reduce using rule 37 (expressao)]
    T_E       [reduce using rule 37 (expressao)]
    T_OU      [reduce using rule 37 (expressao)]
    $default  reduce using rule 37 (expressao)


State 68

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao
   38          | expressao T_OU expressao •

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_E      shift, and go to state 54

    T_E       [reduce using rule 38 (expressao)]
    $default  reduce using rule 38 (expressao)


State 69

   29 repeticao: T_ENQTO $@5 expressao T_FACA • $@6 lista_comandos T_FIMENQTO

    $default  reduce using rule 28 ($@6)

    $@6  go to state 71


State 70

   26 selecao: T_SE expressao T_ENTAO $@3 • lista_comandos T_SENAO $@4 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 17
    T_LEIA     shift, and go to state 18
    T_ESCREVA  shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_SE       shift, and go to state 21

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 72
    comando         go to state 23
    entrada_saida   go to state 24
    entrada         go to state 25
    saida           go to state 26
    atribuicao      go to state 27
    selecao         go to state 28
    repeticao       go to state 29


State 71

   29 repeticao: T_ENQTO $@5 expressao T_FACA $@6 • lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 17
    T_LEIA     shift, and go to state 18
    T_ESCREVA  shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_SE       shift, and go to state 21

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 73
    comando         go to state 23
    entrada_saida   go to state 24
    entrada         go to state 25
    saida           go to state 26
    atribuicao      go to state 27
    selecao         go to state 28
    repeticao       go to state 29


State 72

   26 selecao: T_SE expressao T_ENTAO $@3 lista_comandos • T_SENAO $@4 lista_comandos T_FIMSE
